@@ -10,3 +10,4 @@ More robust vbar control detection on windows.
 
 v2.2.0
 Added Graph
+Added remember window size
